--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "NSFaceIDUsageDescription": "Face ID is used to authenticate the user."
     },
     "android": {
       "adaptiveIcon": {
